--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@
 	overflow: hidden;
 }
 #header {
-	position: relative;
 	width: 100%;
 	height: 100px;
 	overflow: hidden;
@@ -11,6 +10,7 @@
   position: fixed;
   top: 23px;
   right: 23px; 
+  z-index: 2;
 }
 
 /*チェックボックス等は非表示に*/
@@ -91,7 +91,8 @@
 #main .top-contaner {
 	position: relative;
 	width: 1100px;
-	margin: 0px auto; 
+	margin: 0px auto;
+	z-index: 1;
 }
 #main .top-contaner h1 {
 	display: inline-block;
@@ -247,7 +248,6 @@
 }
 @media screen and (max-width:480px) {
 	#header {
-	position: relative;
 	width: 100%;
 	height: 40px;
 	overflow: hidden;
@@ -334,6 +334,7 @@
 		width: 100%;
 	}
 	#main .top-contaner {
+		position: relative;
 		width: 80%;
 		margin: 0px auto; 
 	}
@@ -351,7 +352,6 @@
 		-webkit- transform: translateY(-50%) translateX(-50%);
 	}
 	#main .top-contaner .top-img {
-		position: relative;
 		width: 100%;
 	}
 	#works-contaner {
