--- a/css/main.css
+++ b/css/main.css
@@ -66,12 +66,21 @@
   left: 0;
   z-index: 9999;/*最前面に*/
   width: 90%;/*右側に隙間を作る（閉じるカバーを表示）*/
-  max-width: 330px;/*最大幅（調整してください）*/
+  max-width: 180px;/*最大幅（調整してください）*/
   height: 100%;
   background: #fff;/*背景色*/
   transition: .3s ease-in-out;/*滑らかに表示*/
   -webkit-transform: translateX(-105%);
   transform: translateX(-105%);/*左に隠しておく*/
+}
+
+#header #nav-drawer #nav-content p a{
+	display: inline-block;
+	margin: 50px 0px 0px 15px;
+	color: #000;
+	font-size: 28px;
+	font-family: 'Lato', sans-serif;
+	text-decoration: none;
 }
 
 /*チェックが入ったらもろもろ表示*/
