--- a/css/main.css
+++ b/css/main.css
@@ -7,73 +7,62 @@
 	overflow: hidden;
 }
 #header #nav-drawer {
-  position: fixed;
-  top: 23px;
-  right: 23px; 
-  z-index: 2;
+	position: fixed;
+	top: 23px;
+	right: 23px; 
+ 	z-index: 2;
 }
-
-/*チェックボックス等は非表示に*/
 #header #nav-drawer .nav-unshown {
-  display:none;
+  	display:none;
 }
-
-/*アイコンのスペース*/
 #header #nav-drawer #nav-open {
-  display: inline-block;
-  width: 30px;
-  height: 22px;
-  vertical-align: middle;
+  	display: inline-block;
+  	width: 30px;
+  	height: 22px;
+  	vertical-align: middle;
 }
-
-/*ハンバーガーアイコンをCSSだけで表現*/
 #header #nav-drawer #nav-open span, #nav-open span:before, #nav-open span:after {
-  position: absolute;
-  height: 1px;/*線の太さ*/
-  width: 25px;/*長さ*/
-  border-radius: 3px;
-  background: #555;
-  display: block;
-  content: '';
-  cursor: pointer;
+  	position: absolute;
+  	height: 1px;
+  	width: 25px;
+  	border-radius: 3px;
+  	background: #555;
+  	display: block;
+  	content: '';
+  	cursor: pointer;
 }
 #header #nav-drawer #nav-open span:before {
-  bottom: -8px;
+  	bottom: -8px;
 }
 #header #nav-drawer #nav-open span:after {
-  bottom: -16px;
+  	bottom: -16px;
 }
-
-/*閉じる用の薄黒カバー*/
 #header #nav-drawer #nav-close {
-  display: none;/*はじめは隠しておく*/
-  position: fixed;
-  z-index: 99;
-  top: 0;/*全体に広がるように*/
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: black;
-  opacity: 0;
-  transition: .3s ease-in-out;
+  	display: none;
+  	position: fixed;
+  	z-index: 99;
+  	top: 0;
+  	left: 0;
+  	width: 100%;
+  	height: 100%;
+  	background: black;
+  	opacity: 0;
+  	transition: .3s ease-in-out;
 }
-
-/*中身*/
 #header #nav-drawer #nav-content {
-  overflow: auto;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;/*最前面に*/
-  width: 90%;/*右側に隙間を作る（閉じるカバーを表示）*/
-  max-width: 180px;/*最大幅（調整してください）*/
-  height: 100%;
-  background: #fff;/*背景色*/
-  transition: .3s ease-in-out;/*滑らかに表示*/
-  -webkit-transform: translateX(-105%);
-  transform: translateX(-105%);/*左に隠しておく*/
+  	overflow: auto;
+  	position: fixed;
+  	top: 0;
+  	left: 0;
+  	z-index: 9999;
+  	width: 90%;
+  	max-width: 180px;
+  	height: 100%;
+  	background: #fff;
+  	transition: .3s ease-in-out;
+  	-webkit-transform: translateX(-105%);
+  	transform: translateX(-105%);
 }
-
 #header #nav-drawer #nav-content p a{
 	display: inline-block;
 	margin: 50px 0px 0px 15px;
@@ -82,17 +71,14 @@
 	font-family: 'Lato', sans-serif;
 	text-decoration: none;
 }
-
-/*チェックが入ったらもろもろ表示*/
 #header #nav-drawer #nav-input:checked ~ #nav-close {
-  display: block;/*カバーを表示*/
-  opacity: .5;
+  	display: block;
+  	opacity: .5;
 }
-
 #header #nav-drawer #nav-input:checked ~ #nav-content {
-  -webkit-transform: translateX(0%);
-  transform: translateX(0%);/*中身を表示（右へスライド）*/
-  box-shadow: 6px 0 25px rgba(0,0,0,.15);
+  	-webkit-transform: translateX(0%);
+  	transform: translateX(0%);
+  	box-shadow: 6px 0 25px rgba(0,0,0,.15);
 }
 #main {
 	width: 100%;
@@ -239,7 +225,7 @@
 	color: #7d7c7c;
   	top: 50%;
   	left: 50%;
-  	-webkit-transform: translateX(-50%) translateY(-50%); /* Safari用 */
+  	-webkit-transform: translateX(-50%) translateY(-50%);
   	transform: translateX(-50%) translateY(-50%);
 }
 #skill-contaner ul li img {
@@ -257,77 +243,66 @@
 }
 @media screen and (max-width:480px) {
 	#header {
-	width: 100%;
-	height: 40px;
-	overflow: hidden;
+		width: 100%;
+		height: 40px;
+		overflow: hidden;
 	}
 	#header #nav-drawer {
-	  position: fixed;
-	  top: 23px;
-	  right: 23px; 
+	  	position: fixed;
+	  	top: 23px;
+	  	right: 23px; 
 	}
-
-	/*チェックボックス等は非表示に*/
 	#header #nav-drawer .nav-unshown {
-	  display:none;
+	  	display:none;
 	}
-
-	/*アイコンのスペース*/
 	#header #nav-drawer #nav-open {
-	  display: inline-block;
-	  width: 30px;
-	  height: 22px;
-	  vertical-align: middle;
+	  	display: inline-block;
+	  	width: 30px;
+	  	height: 22px;
+	  	vertical-align: middle;
 	}
-
-	/*ハンバーガーアイコンをCSSだけで表現*/
 	#header #nav-drawer #nav-open span, #nav-open span:before, #nav-open span:after {
-	  position: absolute;
-	  height: 1px;/*線の太さ*/
-	  width: 25px;/*長さ*/
-	  border-radius: 3px;
-	  background: #555;
-	  display: block;
-	  content: '';
-	  cursor: pointer;
+	  	position: absolute;
+	  	height: 1px;
+	  	width: 25px;
+	  	border-radius: 3px;
+	  	background: #555;
+	  	display: block;
+	  	content: '';
+	  	cursor: pointer;
 	}
 	#header #nav-drawer #nav-open span:before {
-	  bottom: -8px;
+	  	bottom: -8px;
 	}
 	#header #nav-drawer #nav-open span:after {
-	  bottom: -16px;
+	  	bottom: -16px;
 	}
-
-	/*閉じる用の薄黒カバー*/
 	#header #nav-drawer #nav-close {
-	  display: none;/*はじめは隠しておく*/
-	  position: fixed;
-	  z-index: 99;
-	  top: 0;/*全体に広がるように*/
-	  left: 0;
-	  width: 100%;
-	  height: 100%;
-	  background: black;
-	  opacity: 0;
-	  transition: .3s ease-in-out;
+	  	display: none;
+	  	position: fixed;
+	  	z-index: 99;
+	  	top: 0;
+	  	left: 0;
+	  	width: 100%;
+	  	height: 100%;
+	  	background: black;
+	  	opacity: 0;
+	  	transition: .3s ease-in-out;
 	}
-
-	/*中身*/
 	#header #nav-drawer #nav-content {
-	  overflow: auto;
-	  position: fixed;
-	  top: 0;
-	  left: 0;
-	  z-index: 9999;/*最前面に*/
-	  width: 90%;/*右側に隙間を作る（閉じるカバーを表示）*/
-	  max-width: 100px;/*最大幅（調整してください）*/
-	  height: 100%;
-	  background: #fff;/*背景色*/
-	  transition: .3s ease-in-out;/*滑らかに表示*/
-	  -webkit-transform: translateX(-105%);
-	  transform: translateX(-105%);/*左に隠しておく*/
+	  	overflow: auto;
+	  	position: fixed;
+	  	top: 0;
+	  	left: 0;
+	  	z-index: 9999;
+	  	width: 90%;
+	  	max-width: 100px;
+	  	height: 100%;
+	  	background: #fff;
+	  	transition: .3s ease-in-out;
+	  	-webkit-transform: translateX(-105%);
+	  	transform: translateX(-105%);
 	}
-
 	#header #nav-drawer #nav-content p a{
 		display: inline-block;
 		margin: 30px 0px 0px 8px;
@@ -336,17 +311,14 @@
 		font-family: 'Lato', sans-serif;
 		text-decoration: none;
 	}
-
-	/*チェックが入ったらもろもろ表示*/
 	#header #nav-drawer #nav-input:checked ~ #nav-close {
-	  display: block;/*カバーを表示*/
-	  opacity: .5;
+	  	display: block;
+	  	opacity: .5;
 	}
-
 	#header #nav-drawer #nav-input:checked ~ #nav-content {
-	  -webkit-transform: translateX(0%);
-	  transform: translateX(0%);/*中身を表示（右へスライド）*/
-	  box-shadow: 6px 0 25px rgba(0,0,0,.15);
+	  	-webkit-transform: translateX(0%);
+	  	transform: translateX(0%);
+	  	box-shadow: 6px 0 25px rgba(0,0,0,.15);
 	}
 	#main {
 		width: 100%;
@@ -496,7 +468,7 @@
 		font-size: 13px;
 	  	top: 50%;
 	  	left: 50%;
-	  	-webkit-transform: translateX(-50%) translateY(-50%); /* Safari用 */
+	  	-webkit-transform: translateX(-50%) translateY(-50%);
 	  	transform: translateX(-50%) translateY(-50%);
 	}
 	#skill-contaner ul li img {
