--- a/detail/css/main.css
+++ b/detail/css/main.css
@@ -247,7 +247,7 @@
 	.scrol_inner h1 {
 		margin-bottom: 70px;
 		font-size: 36px;
-		font-family: YuGothic,'Yu Gothic',sans-serif;
+		font-family: 'Lato', sans-serif;
 	}
 	.desktop {
 		display: block;
