--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@
 }
 #works-contaner h2 {
 	margin: 0px 0px 60px;
-	font-size: 46px;
+	font-size: 58px;
 	font-family: 'Lato', sans-serif;
 	text-align: center;
 }
@@ -129,6 +129,7 @@
 	display: block;
 	width: 23%;
 	height: 266px;
+	box-shadow: 10px 10px #eee;
 	overflow: hidden;
 }
 #works-contaner ul li p {
@@ -154,11 +155,11 @@
 #profile-contaner {
 	width: 1100px;
 	height: 334px;
-	margin: 100px auto 30px;
+	margin: 150px auto 30px;
 }
 #profile-contaner  h2 {
 	margin: 0px 0px 60px;
-	font-size: 46px;
+	font-size: 58px;
 	font-family: 'Lato', sans-serif;
 	text-align: center;
 }
@@ -199,11 +200,11 @@
 #skill-contaner {
 	width: 1100px;
 	height: 414px;
-	margin: 100px auto 0px;
+	margin: 150px auto 0px;
 }
 #skill-contaner  h2 {
 	margin: 0px 0px 60px;
-	font-size: 46px;
+	font-size: 58px;
 	font-family: 'Lato', sans-serif;
 	text-align: center;
 }
@@ -219,7 +220,9 @@
 	height: 80px;
 	margin-bottom: 30px;
 	text-align: center;
+	border-radius: 40px;
 	border: 1px solid #7d7c7c; 
+	box-shadow: 7px 7px #eee;
 }
 #skill-contaner ul li h3 {
 	position: absolute;
@@ -370,6 +373,7 @@
 		width: 47%;
 		height: 145px;
 		margin-bottom: 18px;
+		box-shadow: 6px 6px #eee;
 		overflow: hidden;
 	}
 	#works-contaner ul li p {
@@ -462,7 +466,9 @@
 		height: 77px;
 		margin-bottom: 29px;
 		text-align: center;
+		border-radius: 20px;
 		border: 1px solid #7d7c7c; 
+		box-shadow: 6px 6px #eee;
 	}
 	#skill-contaner ul li h3 {
 		position: absolute;
