--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,8 @@
 }
 #header #nav-drawer {
 	position: fixed;
-	top: 23px;
-	right: 23px; 
+	top: 30px;
+	right: 30px; 
  	z-index: 2;
 }
 #header #nav-drawer .nav-unshown {
@@ -17,14 +17,14 @@
 }
 #header #nav-drawer #nav-open {
   	display: inline-block;
-  	width: 30px;
+  	width: 35px;
   	height: 22px;
   	vertical-align: middle;
 }
 #header #nav-drawer #nav-open span, #nav-open span:before, #nav-open span:after {
   	position: absolute;
-  	height: 1px;
-  	width: 25px;
+  	width: 35px;
+  	height: 0.4px;
   	border-radius: 3px;
   	background: #555;
   	display: block;
@@ -134,6 +134,7 @@
 }
 #works-contaner ul li p {
 	border: 1px solid #ebebeb;
+	background-color: #726E6E;
 	overflow: hidden;
 }
 #works-contaner ul li p img {
@@ -143,6 +144,7 @@
 	transition-delay: 0.3s;
 }
 #works-contaner ul li p img:hover {
+	opacity: 0.6;
 	transform: scale(1.1);
 	transition-delay: 0.3s;
 }
@@ -223,14 +225,35 @@
 	border-radius: 40px;
 	border: 1px solid #7d7c7c; 
 	box-shadow: 7px 7px #eee;
+	overflow: hidden;
 }
 #skill-contaner ul li h3 {
 	position: absolute;
 	color: #000;
   	top: 50%;
   	left: 50%;
+  	opacity: 1;
   	-webkit-transform: translateX(-50%) translateY(-50%);
   	transform: translateX(-50%) translateY(-50%);
+}
+#skill-contaner ul li:hover h3 {
+	opacity: 0;
+}
+#skill-contaner ul li  .mask-contaner {
+	width: 100%;
+	height:	100%;
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	opacity: 0;
+	font-size: 28px;
+	background-color: rgba(0,0,0,0.4);
+	-webkit-transition:	all 0.6s ease;
+	transition:		all 0.6s ease;
+}
+#skill-contaner ul li:hover  .mask-contaner {
+	opacity: 1;
+	padding-top: 30px;
 }
 #skill-contaner ul li img {
 	width: 55%;
@@ -469,6 +492,7 @@
 		border-radius: 20px;
 		border: 1px solid #7d7c7c; 
 		box-shadow: 6px 6px #eee;
+		overflow: hidden;
 	}
 	#skill-contaner ul li h3 {
 		position: absolute;
@@ -476,8 +500,28 @@
 		font-size: 13px;
 	  	top: 50%;
 	  	left: 50%;
+	  	opacity: 1;
 	  	-webkit-transform: translateX(-50%) translateY(-50%);
 	  	transform: translateX(-50%) translateY(-50%);
+	}
+	#skill-contaner ul li:hover h3 {
+	opacity: 0;
+	}
+	#skill-contaner ul li  .mask-contaner {
+	width: 100%;
+	height:	100%;
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	opacity: 0;
+	font-size: 12px;
+	background-color: rgba(0,0,0,0.4);
+	-webkit-transition:	all 0.6s ease;
+	transition:		all 0.6s ease;
+	}
+	#skill-contaner ul li:hover  .mask-contaner {
+		opacity: 1;
+		padding-top: 30px;
 	}
 	#skill-contaner ul li img {
 		width: 55%;
