--- a/css/main.css
+++ b/css/main.css
@@ -225,7 +225,6 @@
 	border-radius: 40px;
 	border: 1px solid #7d7c7c; 
 	box-shadow: 7px 7px #eee;
-	overflow: hidden;
 }
 #skill-contaner ul li h3 {
 	position: absolute;
@@ -241,16 +240,16 @@
 	opacity: 0;
 }
 #skill-contaner ul li  .mask-contaner {
-	width: 100%;
-	height:	100%;
 	position: absolute;
 	top: 0%;
 	left: 0%;
 	opacity: 0;
+	width: 100%;
+	height:	100%;
 	font-size: 28px;
 	background-color: rgba(0,0,0,0.4);
 	-webkit-transition:	all 0.6s ease;
-	transition:		all 0.6s ease;
+	transition:	all 0.6s ease;
 }
 #skill-contaner ul li:hover  .mask-contaner {
 	opacity: 1;
@@ -493,7 +492,6 @@
 		border-radius: 20px;
 		border: 1px solid #7d7c7c; 
 		box-shadow: 6px 6px #eee;
-		overflow: hidden;
 	}
 	#skill-contaner ul li h3 {
 		position: absolute;
@@ -506,22 +504,23 @@
 	  	transform: translateX(-50%) translateY(-50%);
 	}
 	#skill-contaner ul li:hover h3 {
-	opacity: 0;
+		opacity: 1;
 	}
 	#skill-contaner ul li  .mask-contaner {
-	width: 100%;
-	height:	100%;
-	position: absolute;
-	top: 0%;
-	left: 0%;
-	opacity: 0;
-	font-size: 12px;
-	background-color: rgba(0,0,0,0.4);
-	-webkit-transition:	all 0.6s ease;
-	transition:		all 0.6s ease;
+		position: absolute;
+		top: 0%;
+		left: 0%;
+		opacity: 0;
+		width: 90%;
+		height:	90%;
+		margin: auto;
+		font-size: 12px;
+		background-color: rgba(0,0,0,0.4);
+		-webkit-transition:	all 0.6s ease;
+		transition:	all 0.6s ease;
 	}
 	#skill-contaner ul li:hover  .mask-contaner {
-		opacity: 1;
+		opacity: 0;
 		padding-top: 30px;
 	}
 	#skill-contaner ul li img {
