--- a/detail/css/main.css
+++ b/detail/css/main.css
@@ -1,3 +1,9 @@
+* {
+ 	box-sizing: border-box;
+}
+body {
+	background-color: #deb887;
+}
 #header {
 	position: relative;
 	width: 100%;
@@ -5,25 +11,26 @@
 	overflow: hidden;
 }
 #header #nav-drawer {
-  	position: fixed;
-  	top: 23px;
-  	right: 23px; 
+	position: fixed;
+	top: 30px;
+	right: 30px; 
+ 	z-index: 2;
 }
 #header #nav-drawer .nav-unshown {
   	display:none;
 }
 #header #nav-drawer #nav-open {
   	display: inline-block;
-  	width: 30px;
+  	width: 35px;
   	height: 22px;
   	vertical-align: middle;
 }
 #header #nav-drawer #nav-open span, #nav-open span:before, #nav-open span:after {
   	position: absolute;
+  	width: 30px;
   	height: 1px;
-  	width: 25px;
   	border-radius: 3px;
-  	background: #555;
+  	background: #fff;
   	display: block;
   	content: '';
   	cursor: pointer;
@@ -52,7 +59,7 @@
   	left: 0;
   	z-index: 9999;
   	width: 90%;
-  	max-width: 330px;
+  	max-width: 300px;
   	height: 100%;
   	background: #fff;
   	transition: .3s ease-in-out;
@@ -62,10 +69,10 @@
 }
 #header #nav-drawer #nav-content p a{
 	display: inline-block;
-	margin: 50px 0px 0px 15px;
+	margin: 50px 0px 0px 18px;
 	color: #000;
 	font-size: 28px;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Montserrat', ;
 	text-decoration: none;
 }
 #header #nav-drawer #nav-input:checked ~ #nav-close {
@@ -73,7 +80,7 @@
   	opacity: .5;
 }
 #header #nav-drawer #nav-input:checked ~ #nav-content {
- 	-webkit-transform: translateX(0%);
+  	-webkit-transform: translateX(0%);
   	transform: translateX(0%);
   	box-shadow: 6px 0 25px rgba(0,0,0,.15);
 }
@@ -119,28 +126,28 @@
 .scrol_inner ul li h2 {
 	width: 65%;
 	margin: 0px auto;
-	font-size: 20px;
+	font-size: 22px;
 	text-align: left;
 }
 .scrol_inner ul li p {
 	display: block;
 	width: 65%;
 	margin: 15px auto 15px;
-	font-size: 15px;
-	font-family: YuGothic,'Yu Gothic','Corbel','Microsoft Sans Serif','Helvetica',sans-serif;
+	font-size: 17px;
+	font-family: YuGothic,'Yu Gothic',sans-serif;
 	text-align: left;
 	line-height: 1.5em;
 }
 .scrol_inner ul li .page-detail {
 	display: block;
 	width: 65%;
-	font-size: 15px;
-	font-family: YuGothic,'Yu Gothic','Corbel','Microsoft Sans Serif','Helvetica',sans-serif;
+	font-size: 17px;
+	font-family: YuGothic,'Yu Gothic',sans-serif;
 }
 .scrol_inner ul li a {
 	display: inline-block;
 	float: left;
-	font-size: 13px;
+	font-size: 15px;
 	text-decoration: none;
 }
 #footer {
@@ -281,7 +288,7 @@
 		width: 90%;
 		margin: 15px auto 15px;
 		font-size: 12px;
-		font-family: YuGothic,'Yu Gothic','Corbel','Microsoft Sans Serif','Helvetica',sans-serif;
+		font-family: YuGothic,'Yu Gothic',sans-serif;
 		text-align: left;
 		line-height: 1.5em;
 	}
@@ -289,7 +296,7 @@
 		display: block;
 		width: 90%;
 		font-size: 12px;
-		font-family: YuGothic,'Yu Gothic','Corbel','Microsoft Sans Serif','Helvetica',sans-serif;
+		font-family: YuGothic,'Yu Gothic',sans-serif;
 	}
 	.scrol_inner ul li .page-detail .css-br::after {
 	  content: "\A" ;
