--- a/css/main.css
+++ b/css/main.css
@@ -307,14 +307,14 @@ body {
 	cursor: pointer;
 	display: block;
 	width: 23%;
-	height: 316px;
+	height: 326px;
 	border-radius: 40px;
 	box-shadow: 12px 12px #ddd;
 	background: #fff;
 	overflow: hidden;
 }
 #works-container ul li p {
-	border-radius: 40px;
+	border-radius: 40px 40px 0px 0px;
 	border: 1px solid #fff;
 	overflow: hidden;
 }
@@ -330,7 +330,7 @@ body {
 	transition-delay: 0.3s;
 }
 #works-container ul li h3 {
-	margin-top: 12px;
+	margin-top: 16px;
 	color: #7d7c7c;
 	font-size: 12px;
 	text-align: center;
@@ -478,7 +478,7 @@ body {
 	  	height: 1px;
 	  	width: 25px;
 	  	border-radius: 3px;
-	  	background: #555;
+	  	background: #fff;
 	  	display: block;
 	  	content: '';
 	  	cursor: pointer;
@@ -754,15 +754,15 @@ body {
 		cursor: pointer;
 		display: block;
 		width: 100%;
-		height: 320px;
+		height: 323px;
 		margin-top: 50px;
 		border-radius: 40px;
-		box-shadow: 12px 12px #ddd;
+		box-shadow: 7px 7px #ddd;
 		background: #fff;
 		overflow: hidden;
 	}
 	#works-container ul li p {
-		border-radius: 40px;
+		border-radius: 40px 40px 0px 0px;
 		border: 1px solid #fff;
 		overflow: hidden;
 	}
@@ -778,7 +778,7 @@ body {
 		transition-delay: 0.3s;
 	}
 	#works-container ul li h3 {
-		margin-top: 12px;
+		margin-top: 15px;
 		color: #7d7c7c;
 		font-size: 12px;
 		text-align: center;
@@ -824,7 +824,7 @@ body {
 	  	overflow: hidden;
 	}
 	#skill-container ul li:hover h3 {
-		opacity: 0;
+		opacity: 1;
 	}
 	#skill-container ul li  .mask-container {
 		position: absolute;
@@ -839,7 +839,7 @@ body {
 		transition:	all 0.6s ease;
 	}
 	#skill-container ul li:hover  .mask-container {
-		opacity: 1;
+		opacity: 0;
 		padding-top: 30px;
 	}
 	#skill-container ul li img {
@@ -847,7 +847,7 @@ body {
 	}
 	#profile-container {
 		width: 85%;
-		height: 735px;
+		height: 564px;
 		margin: 100px auto 6px;
 	}
 	#profile-container  h2 {
@@ -863,7 +863,7 @@ body {
 		text-align: center;
 	}
 	#profile-container .container-left .profile-img {
-		width: 100%;
+		width: 70%;
 	}
 	#profile-container .container-right {
 		float: left;
@@ -873,19 +873,19 @@ body {
 	#profile-container .container-right h3 {
 		margin: 0px 0px 20px 0px;
 		color: #000;
-		font-size: 22px;
+		font-size: 20px;
 		text-align: center;
 	}
 	#profile-container .container-right .name-eng {
 		margin-left: 27px;
-		font-size: 20px;
+		font-size: 18px;
 		text-align: center;
 	}
 	#profile-container .container-right p {
 		display: block;
 		line-height: 2em;
 		color: #000;
-		font-size: 15px;
+		font-size: 13px;
 		text-align: center;
 	}
 	#profile-container .container-right p .br::before {
@@ -895,11 +895,11 @@ body {
 	#footer {
 		width: 100%;
 		height: 20px;
-		margin-top: 60px;
+		margin-top: 35px;
 	}
 	#footer p{
 		display: block;
-		font-size: 10px;
+		font-size: 9px;
 		text-align: center;
 	}
 
