--- a/detail/css/main.css
+++ b/detail/css/main.css
@@ -185,7 +185,7 @@ body {
 	  	height: 1px;
 	  	width: 25px;
 	  	border-radius: 3px;
-	  	background: #555;
+	  	background: #fff;
 	  	display: block;
 	  	content: '';
 	  	cursor: pointer;
