--- a/css/main.css
+++ b/css/main.css
@@ -519,7 +519,7 @@ body {
 		margin: 30px 0px 0px 8px;
 		color: #000;
 		font-size: 28px;
-		font-family: 'Lato', sans-serif;
+		font-family: 'Spartan', ;
 		text-decoration: none;
 	}
 	#header #nav-drawer #nav-input:checked ~ #nav-close {
