--- a/detail/css/main.css
+++ b/detail/css/main.css
@@ -235,7 +235,7 @@ body {
 		margin: 30px 0px 0px 8px;
 		color: #000;
 		font-size: 28px;
-		font-family: 'Spartan', ;
+		font-family: 'Montserrat', ;
 		text-decoration: none;
 	}
 	#header #nav-drawer #nav-input:checked ~ #nav-close {
