--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ body {
 	margin: 50px 0px 0px 18px;
 	color: #000;
 	font-size: 31px;
-	font-family: 'Spartan', ;
+	font-family: 'Montserrat', ;
 	text-decoration: none;
 }
 #header #nav-drawer #nav-input:checked ~ #nav-close {
@@ -519,7 +519,7 @@ body {
 		margin: 30px 0px 0px 8px;
 		color: #000;
 		font-size: 28px;
-		font-family: 'Spartan', ;
+		font-family: 'Montserrat', ;
 		text-decoration: none;
 	}
 	#header #nav-drawer #nav-input:checked ~ #nav-close {
@@ -884,7 +884,7 @@ body {
 		display: block;
 		line-height: 2em;
 		color: #000;
-		font-size: 13px;
+		font-size: 11px;
 		text-align: center;
 	}
 	#profile-container .container-right p .br::before {
